--- a/lib/csc_worship_web/components/layouts/app.html.heex
+++ b/lib/csc_worship_web/components/layouts/app.html.heex
@@ -1,25 +1,25 @@
 <header class="px-4 sm:px-6 lg:px-8">
   <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
     <div class="flex items-center gap-4">
-      <a href="/">
-        <img src={~p"/images/logo.svg"} width="36" />
+      <a href="https://wiucscdotorg.wordpress.com/">
+        <img src="https://pbs.twimg.com/profile_images/1290371892734558209/sfkQPHtq_400x400.jpg" width="36" />
       </a>
-      <p class="bg-brand/5 text-brand rounded-full px-2 font-medium leading-6">
-        v<%= Application.spec(:phoenix, :vsn) %>
+      <p class="bg-purple-500 text-white rounded-full px-2 font-medium leading-6">
+         CSC Worship App
       </p>
     </div>
     <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
-      <a href="https://twitter.com/elixirphoenix" class="hover:text-zinc-700">
-        @elixirphoenix
+      <a href="/" class="hover:text-zinc-700">
+        Homepage
       </a>
-      <a href="https://github.com/phoenixframework/phoenix" class="hover:text-zinc-700">
-        GitHub
+      <a href="/songs" class="hover:text-zinc-700">
+        List of Songs
       </a>
       <a
-        href="https://hexdocs.pm/phoenix/overview.html"
+        href="/services"
         class="rounded-lg bg-zinc-100 px-2 py-1 hover:bg-zinc-200/80"
       >
-        Get Started <span aria-hidden="true">&rarr;</span>
+        List of Services <span aria-hidden="true">&rarr;</span>
       </a>
     </div>
   </div>
