--- a/lib/csc_worship_web/controllers/page_html/home.html.heex
+++ b/lib/csc_worship_web/controllers/page_html/home.html.heex
@@ -1,14 +1,14 @@
 <h1 class="text-center"> Welcome to the CSC Worship App! </h1>
 <div class="grid grid-cols-3 justify-items-center gap-3">
-<a href="/drummers" class="block p-4 bg-purple-500 border w-36 h-16 gap-3 text-white text-center rounded-md">Drummers</a>
 <a href="/ac_guitar" class="block p-4 bg-purple-500 border w-36 h-16 gap-3 text-white text-center rounded-md">Acoustics</a>
-<a href="/el_guitar" class="block p-4 bg-purple-500 border w-36 h-16 gap-3 text-white text-center rounded-md">Electric</a>
+<a href="/el_guitar" class="block p-4 bg-purple-500 border w-36 h-16 gap-3 text-white text-center rounded-md">Lead/Misc</a>
+<a href="/keyboards" class="block p-4 bg-purple-500 border w-36 h-16 gap-3 text-white text-center rounded-md">Keyboardists</a>
 <a href="/bassists" class="block p-4 bg-purple-500 border w-36 h-16 gap-3 text-white text-center rounded-md">Bassists</a>
+<a href="/drummers" class="block p-4 bg-purple-500 border w-36 h-16 gap-3 text-white text-center rounded-md">Drummers</a>
 <a href="/vocalists" class="block p-4 bg-purple-500 border w-36 h-16 gap-3 text-white text-center rounded-md">Vocalists</a>
 <a href="/slides" class="block p-4 bg-purple-500 border w-36 h-16 gap-3 text-white text-center rounded-md">Slides</a>
 <a href="/sound" class="block p-4 bg-purple-500 border w-36 h-16 gap-3 text-white text-center rounded-md">Sound</a>
 <a href="/speakers" class="block p-4 bg-purple-500 border w-36 h-16 gap-3 text-white text-center rounded-md">Preachers</a>
-<a href="/keyboards" class="block p-4 bg-purple-500 border w-36 h-16 gap-3 text-white text-center rounded-md">Keyboard</a>
 <a href="/songs" class="block col-span-3 p-6 bg-green-500 border mr-0 w-72 h-20 text-white text-center rounded-md">List of Songs</a>
 <a href="/services" class="block col-span-3 p-6 bg-green-500 border ml-0 w-72 h-20 text-white text-center rounded-md">List of Services</a>
 
