--- a/lib/csc_worship_web/controllers/service_html/service_form.html.heex
+++ b/lib/csc_worship_web/controllers/service_html/service_form.html.heex
@@ -15,6 +15,7 @@
     <.input field={f[:vocalist4]} type="select" options={vocalist_dropdown(@changeset)} prompt="Select person or leave blank" label= "Vocalist" />
     <.input field={f[:slides]} type="select" options={slides_dropdown(@changeset)} prompt="Select person or leave blank" label= "Slides" />
     <.input field={f[:sound]} type="select" options={sound_dropdown(@changeset)} prompt="Select person or leave blank" label= "Sound" />
+    <.input field={f[:sound2]} type="select" options={sound_dropdown(@changeset)} prompt="Select person or leave blank" label= "Sound (optional helper)" />
     <.input 
     field={f[:songs]}
     type="select"
