--- a/lib/csc_worship_web/controllers/page_html/home.html.heex
+++ b/lib/csc_worship_web/controllers/page_html/home.html.heex
@@ -7,7 +7,7 @@
 <a href="/drummers" class="block p-4 bg-purple-500 border w-36 h-16 gap-3 text-white text-center rounded-md">Drummers</a>
 <a href="/vocalists" class="block p-4 bg-purple-500 border w-36 h-16 gap-3 text-white text-center rounded-md">Vocalists</a>
 <a href="/slides" class="block p-4 bg-purple-500 border w-36 h-16 gap-3 text-white text-center rounded-md">Slides</a>
-<a href="/sound" class="block p-4 bg-purple-500 border w-36 h-16 gap-3 text-white text-center rounded-md">Sound</a>
+<a href="/sounds" class="block p-4 bg-purple-500 border w-36 h-16 gap-3 text-white text-center rounded-md">Sound</a>
 <a href="/speakers" class="block p-4 bg-purple-500 border w-36 h-16 gap-3 text-white text-center rounded-md">Preachers</a>
 <a href="/songs" class="block col-span-3 p-6 bg-green-500 border mr-0 w-72 h-20 text-white text-center rounded-md">List of Songs</a>
 <a href="/services" class="block col-span-3 p-6 bg-green-500 border ml-0 w-72 h-20 text-white text-center rounded-md">List of Services</a>
