--- a/lib/csc_worship_web/controllers/service_html/service_form.html.heex
+++ b/lib/csc_worship_web/controllers/service_html/service_form.html.heex
@@ -28,7 +28,7 @@
   <.input field={f[:rehearsal_time1]} type="datetime-local" label="Rehearsal time1" />
   <.input field={f[:rehearsal_time_2]} type="datetime-local" label="Rehearsal time 2" />  
   <.input field={f[:email_sent]} type="checkbox" label="Clicking this box and saving the form will send an info email to all participants. If you are updating the service, please uncheck this box." />  
-  <.input field={f[:updated]} type="checkbox" label="Only click this box if you have changed a participant or a rehearsal time. If this applies, please UNCHECK the box above." />  
+  <.input field={f[:updated]} type="checkbox" label="Only click this box if you have changed a participant or a rehearsal time and want to send an email denoting that. If this applies, please UNCHECK the box above." />  
   <:actions>
     <.button>Save Service</.button>
   </:actions>
