--- a/lib/csc_worship_web/controllers/sound_html/show.html.heex
+++ b/lib/csc_worship_web/controllers/sound_html/show.html.heex
@@ -10,7 +10,7 @@
 
 <.list>
   <:item title="Name"><%= @sound.name %></:item>
-  <:item title="Dates Unavaliable"><%= for x <- @sound.dates_avaliable, do: to_string(x) <> ", "  %></:item>
+  <:item title="Dates Unavaliable"><%= if @sound.dates_avaliable != nil, do: for x <- @sound.dates_avaliable, do: to_string(x) <> ", "  %></:item>
   <:item title="Email"><%= @sound.email %></:item>
 </.list>
 
