--- a/lib/csc_worship_web/controllers/vocalist_html/index.html.heex
+++ b/lib/csc_worship_web/controllers/vocalist_html/index.html.heex
@@ -9,7 +9,11 @@
 
 <.table id="vocalists" rows={@vocalists} row_click={&JS.navigate(~p"/vocalists/#{&1}")}>
   <:col :let={vocalist} label="Name"><%= vocalist.name %></:col>
-  <:col :let={vocalist} label="Dates Unavaliable"><%= for x <- vocalist.dates_avaliable, do: to_string(x) <> ", "  %></:col>
+  <:col :let={vocalist} label="Dates Unavaliable"><%=if vocalist.dates_avaliable != nil do
+   for x <- vocalist.dates_avaliable, do: to_string(x) <> ", "
+   else
+    "N/A"
+    end  %></:col>
   <:col :let={vocalist} label="Email"><%= vocalist.email %></:col>
   <:action :let={vocalist}>
     <div class="sr-only">
