--- a/lib/csc_worship_web/controllers/service_html/new.html.heex
+++ b/lib/csc_worship_web/controllers/service_html/new.html.heex
@@ -3,6 +3,6 @@
   <:subtitle>Use this form to manage service records in your database.</:subtitle>
 </.header>
 
-<.service_form changeset={@changeset} action={~p"/services"} />
+<.service_form changeset={@changeset} date= {nil} action={~p"/services"} />
 
 <.back navigate={~p"/services"}>Back to services</.back>
