--- a/lib/csc_worship_web/controllers/slide_html/index.html.heex
+++ b/lib/csc_worship_web/controllers/slide_html/index.html.heex
@@ -9,7 +9,7 @@
 
 <.table id="slides" rows={@slides} row_click={&JS.navigate(~p"/slides/#{&1}")}>
   <:col :let={slide} label="Name"><%= slide.name %></:col>
-  <:col :let={slide} label="Dates Unavaliable"><%= for x <- slide.dates_avaliable, do: to_string(x) <> ", "  %></:col>
+  <:col :let={slide} label="Dates Unavaliable"><%= if slide.dates_avaliable != nil, do: for x <- slide.dates_avaliable, do: to_string(x) <> ", "  %></:col>
   <:col :let={slide} label="Email"><%= slide.email %></:col>
   <:action :let={slide}>
     <div class="sr-only">
