--- a/lib/csc_worship_web/controllers/slide_html/slide_form.html.heex
+++ b/lib/csc_worship_web/controllers/slide_html/slide_form.html.heex
@@ -7,7 +7,7 @@
     field={f[:dates_avaliable]}
     type="select"
     multiple
-    label="Dates Unavaliable. Press SHIFT and click to select multiple."
+    label="Dates Unavaliable. Press SHIFT and click to select multiple. Select 1969 date if they are available every day."
     options={CscWorshipWeb.KeyboardHTML.date_list(@changeset)}  />
   <.input field={f[:email]} type="text" label="Email" />
    <.input field={f[:times_used]} type="number" label="Times this player has done THIS spot." />
