--- a/lib/csc_worship_web/controllers/drummer_html/drummer_form.html.heex
+++ b/lib/csc_worship_web/controllers/drummer_html/drummer_form.html.heex
@@ -7,7 +7,7 @@
     field={f[:dates_avaliable]}
     type="select"
     multiple
-    label="Dates Unvaliable. Press SHIFT and click to select multiple."
+    label="Dates Unvaliable. Press SHIFT and click to select multiple. Select 1969 date if they are available every day."
     options={CscWorshipWeb.KeyboardHTML.date_list(@changeset)}
   />
   <.input field={f[:email]} type="text" label="Email" /> 
