--- a/lib/csc_worship_web/controllers/electric_html/show.html.heex
+++ b/lib/csc_worship_web/controllers/electric_html/show.html.heex
@@ -10,7 +10,7 @@
 
 <.list>
   <:item title="Name"><%= @electric.name %></:item>
-  <:item title="Dates Unavaliable"><%= for x <- @electric.dates_avaliable, do: to_string(x) <> ", " %></:item>
+  <:item title="Dates Unavaliable"><%= if @electric.dates_avaliable != nil, do: for x <- @electric.dates_avaliable, do: to_string(x) <> ", " %></:item>
   <:item title="Email"><%= @electric.email %></:item>
 </.list>
 
