--- a/lib/csc_worship_web/controllers/speaker_html/speaker_form.html.heex
+++ b/lib/csc_worship_web/controllers/speaker_html/speaker_form.html.heex
@@ -7,7 +7,7 @@
     field={f[:dates_preaching]}
     type="select"
     multiple
-    label="Dates Preaching. Press SHIFT and click to select multiple."
+    label="Dates Preaching. Press SHIFT and click to select multiple. Select 1969 date if they are available every day."
     options={CscWorshipWeb.KeyboardHTML.date_list(@changeset)}
   />
   <.input field={f[:email]} type="text" label="Email" />
