--- a/lib/csc_worship_web/controllers/service_html/index.html.heex
+++ b/lib/csc_worship_web/controllers/service_html/index.html.heex
@@ -6,7 +6,41 @@
     </.link>
   </:actions>
 </.header>
-
+<div id="info" data-value= {tops = ["date~","slides~", "sound~", "songs~", "sound2~", "vocalist1~", "drummer~", "bass~", "keyboard~", "electric/lead~", "acoustic~", "rehearsal1~", "rehearsal2~"]
+mainstring = 
+for x <- @services do
+fields = (Map.take(x, [:date, :songs, :acoustic_guitar, :electric_guitar, :piano, :bass, :drums, :singer1, :singer2, :projection, :sounds, :sound_board, :rehearsal_time1, :rehearsal_time_2, ]))
+for y <- fields do 
+n = Kernel.elem(y, 1)
+case n do
+nil -> "N/A~"
+%DateTime{} = datetime -> p = to_string(Kernel.elem(y, 1))
+day = CscWorshipWeb.ServiceController.day_of_week(Kernel.elem(y, 1)) <> " " <> String.slice(p, 5..7) <> String.slice(p, 8..9) <> "-" <> String.slice(p, 0..3)
+    p2 = Integer.parse(String.slice(p, 11..12))
+    if Kernel.elem(p2, 0)- 12 >= 0 do
+      day <> " at " <> to_string(Kernel.elem(p2, 0)- 12) <> String.slice(p, 13..15) <> "PM"
+    else
+     day <> " at " <> to_string(Kernel.elem(p2, 0)) <> String.slice(p, 13..15) <> "AM"
+    end <> "~"
+_ when is_list(n) ->
+ n2 = Enum.with_index(n) 
+ for z <- n2 do 
+ if Kernel.elem(z, 1) != 4 do 
+ Kernel.elem(z, 0) <> "-" 
+ else 
+ Kernel.elem(z, 0) <> "~"
+ end
+end
+ _ -> to_string(Map.get(Kernel.elem(y, 1), :name)) <> "~"
+end
+ end
+end
+IO.inspect(tops ++ mainstring)
+ }hidden="true"></div>
+ <a id="csv" href="#" download="" class={[
+        "phx-submit-loading:opacity-75 rounded-lg bg-zinc-900 hover:bg-zinc-700 py-2 px-3",
+        "text-sm font-semibold leading-6 text-white active:text-white/80"
+      ]}> Download Spreadsheet </a>
 <.table id="services" rows={@services} row_click={&JS.navigate(~p"/services/#{&1}")}>
   <:col :let={service} label="Date"><%= p = to_string(service.date)
     String.slice(p, 5..7) <> String.slice(p, 8..9) <> "-" <> String.slice(p, 0..3) %></:col>
@@ -57,3 +91,32 @@
     </.link>
   </:action>
 </.table>
+
+
+<script>
+const moon = document.getElementById("info").getAttribute("data-value");
+var moon2 = moon.split("~");
+console.log(moon2)
+var moon4 = []
+for (var i = 0; i < moon2.length-1; i = i + 13){
+ const moon3 = moon2.slice(i, i+13);
+ moon4.push(moon3);
+console.log(moon4);
+}
+const titleKeys = Object.keys(moon4[0]);
+const refinedData = [];
+refinedData.push(titleKeys);
+moon4.forEach(row => {
+refinedData.push(Object.values(row)) 
+}
+)
+let csvContent = '';
+refinedData.forEach(row => {
+  csvContent += row.join(',') + '\n'
+})
+const blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8,'})
+const objUrl = URL.createObjectURL(blob);
+const csvDownload = document.getElementById("csv");
+csvDownload.href = objUrl;
+csvDownload.download = "Services.csv";
+</script>
